[package]
name = "use_cargo"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "a fun game where you guess what number the computer has chosen."
authors = ["gaoming <2427373908@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
